atividade 2 camada de servico